trying to connect PostgreSQL database and changed folder names

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#DB config
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.name=beer.io
+spring.datasource.username=postgres
+spring.datasource.password=savov
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
