database connection working for player class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #DB config
-spring.datasource.url=jdbc:postgresql://localhost:5432/
-spring.datasource.name=beer.io
+spring.datasource.url=jdbc:postgresql://localhost:5432/beer.io
 spring.datasource.username=postgres
 spring.datasource.password=savov
 spring.jpa.show-sql=true
