--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
+group = 'com.savov'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '16'
 
@@ -25,9 +25,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
-    implementation 'org.springframework:spring-web:5.3.9'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework:spring-web:5.3.10'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+    runtimeOnly 'org.postgresql:postgresql:42.2.23.jre7'
 }
 
 test {
