--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,10 +4,7 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ development ]
-  pull_request:
-    branches: [ master ]
+  push
 
 jobs:
   build:
