--- a/build.gradle
+++ b/build.gradle
@@ -19,16 +19,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter:2.5.4'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.springframework:spring-web:5.3.10'
+    implementation 'org.springframework.boot:spring-boot-starter:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
-    implementation 'org.postgresql:postgresql:42.2.23'
-    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
+    implementation 'org.postgresql:postgresql:42.2.24'
+//    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
+    implementation 'org.hibernate.orm:hibernate-core:6.0.0.Alpha9'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
-    testImplementation 'org.springframework.security:spring-security-test:5.5.2'
+//    testImplementation 'org.springframework.security:spring-security-test:5.5.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
 }
 
 test {
