--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
     username: postgres
   jpa:
     hibernate:
-      ddl-auto: create-drop #update
+#      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
