--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,9 @@
-name: Java CI with Gradle
+name: CI master
 
 on:
   push:
       branches: 
        - master
-       - development
 
 jobs:
   build:
