--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x ./backend/gradlew
     - name: Build with Gradle
-      run: ./gradlew build -x test
+      run: ./backend/gradlew build -x test
     - name: Run tests with Gradle
-      run: ./gradlew test
+      run: ./backend/gradlew test
