--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
+    "react-select-country-list": "^2.2.3",
     "tailwindcss": "^2.2.17",
     "web-vitals": "^1.1.2"
   },
