--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     testImplementation "org.mockito:mockito-core:3.+"
     testImplementation 'com.h2database:h2:1.4.200'
 
-//    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
-//    testImplementation 'org.springframework.security:spring-security-test:5.5.2'
+    implementation 'com.auth0:java-jwt:3.18.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
+    testImplementation 'org.springframework.security:spring-security-test:5.5.2'
 }
 
 sonarqube {
