--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,7 +61,11 @@ jobs:
           
       - name: Grant execute permission for gradlew
         run: chmod +x ./backend/gradlew
-      - name: Build and analyze
+        
+      - name: Build with Gradle
+        run: cd backend; ./gradlew build
+        
+      - name: Analize
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
