--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,13 +62,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./backend/gradlew
         
-      - name: Build with Gradle
-        run: cd backend; ./gradlew build
-        
-      - name: Analize
+      - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: cd backend; ./gradlew sonarqube --info 
-#         run: cd backend; ./gradlew build sonarqube --info 
+        run: cd backend; ./gradlew build sonarqube --info 
