--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -109,4 +109,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: cd backend; ./gradlew build sonarqube -Dsonar.host.url=http://localhost:9000 --info
+        run: cd backend; ./gradlew build sonarqube --info
