--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "chokidar-cli": "^3.0.0",
+    "formik": "^2.2.9",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
@@ -21,7 +22,8 @@
     "react-select": "^5.1.0",
     "react-select-country-list": "^2.2.3",
     "tailwindcss": "^2.2.17",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "build:tailwind": "tailwind build src/tailwind.css -o src/tailwind.output.css",
