--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,31 +1,3 @@
-# name: Java CI
-
-# on:
-#   push:
-#       branches: 
-#        - master
-#        - development
-
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up JDK 16
-#       uses: actions/setup-java@v2
-#       with:
-#         java-version: '16'
-#         distribution: 'adopt'
-#         cache: gradle
-#     - name: Grant execute permission for gradlew
-#       run: chmod +x ./backend/gradlew
-#     - name: Build with Gradle
-#       run: cd backend; ./gradlew build -x test
-#     - name: Run tests with Gradle
-# #       run: cd backend; ./gradlew test
-
 name: Build
 
 on:
@@ -66,7 +38,7 @@ jobs:
         
       - name: Analyze with SonarQube
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: cd backend; ./gradlew build sonarqube --info
