--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Cache SonarQube packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+#       - name: Cache SonarQube packages
+#         uses: actions/cache@v1
+#         with:
+#           path: ~/.sonar/cache
+#           key: ${{ runner.os }}-sonar
+#           restore-keys: ${{ runner.os }}-sonar
       - name: Cache Gradle packages
         uses: actions/cache@v1
         with:
@@ -33,12 +33,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./backend/gradlew
         
-#       - name: Build with Gradle
-#         run: cd backend; ./gradlew build
+      - name: Build with Gradle
+        run: cd backend; ./gradlew build -x test
+      - name: Test
+        run: cd backend; ./gradlew test
         
-      - name: Analyze with SonarQube
-        env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: cd backend; ./gradlew build sonarqube --info
+#       - name: Analyze with SonarQube
+#         env:
+# #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+#         run: cd backend; ./gradlew build sonarqube --info
