--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,46 +1,27 @@
-name: Build
+name: Java CI
 
 on:
   push:
-    branches:
-#       - master # or the name of your main branch
-      - development
+      branches: 
+       - master
+       - development
+
 jobs:
   build:
-    name: Build
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 16
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-#       - name: Cache SonarQube packages
-#         uses: actions/cache@v1
-#         with:
-#           path: ~/.sonar/cache
-#           key: ${{ runner.os }}-sonar
-#           restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Gradle packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-          
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./backend/gradlew
-        
-      - name: Build with Gradle
-        run: cd backend; ./gradlew build -x test
-      - name: Test
-        run: cd backend; ./gradlew test
-        
-#       - name: Analyze with SonarQube
-#         env:
-# #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-#         run: cd backend; ./gradlew build sonarqube --info
+    - uses: actions/checkout@v2
+    - name: Set up JDK 16
+      uses: actions/setup-java@v2
+      with:
+        java-version: '16'
+        distribution: 'adopt'
+        cache: gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./backend/gradlew
+    - name: Build with Gradle
+      run: cd backend; ./gradlew build -x test
+    - name: Run tests with Gradle
+      run: cd backend; ./gradlew test
