--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,5 +1,10 @@
 name: Java CI
 
+env:
+  DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  USERNAME: krosara
+  REPOSITORY_NAME: beer.io
+
 on:
   push:
       branches: 
@@ -25,4 +30,17 @@ jobs:
       run: cd backend; ./gradlew build -x test
     - name: Run tests with Gradle
       run: cd backend; ./gradlew test
-
+  
+  deploy:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Install Docker
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        run: docker login --username=yourhubusername --password=$DOCKER_HUB_PASSWORD
+      - name: Build Image
+        run: docker build -t $USERNAME/$REPOSITORY_NAME:$IMAGE_TAG .
+      - name: Push Image
+        run: docker push $USERNAME/$REPOSITORY_NAME:$IMAGE_TAG
