--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install Docker
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker
-        run: docker login --username=yourhubusername --password=$DOCKER_HUB_PASSWORD
+        run: docker login --username=$USERNAME --password=$DOCKER_HUB_PASSWORD
       - name: Build Image
         run: docker build -t $USERNAME/$REPOSITORY_NAME:$IMAGE_TAG .
       - name: Push Image
