--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,15 +30,19 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
     implementation 'org.postgresql:postgresql:42.2.24'
     implementation 'org.hibernate.orm:hibernate-core:6.0.0.Alpha9'
+
+
     implementation 'junit:junit:4.13.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
     testImplementation "org.assertj:assertj-core:3.21.0"
     testImplementation "org.mockito:mockito-core:3.+"
     testImplementation 'com.h2database:h2:1.4.200'
 
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+
+    //auth
+
     implementation 'com.auth0:java-jwt:3.18.2'
-//    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
-    testImplementation 'org.springframework.security:spring-security-test:5.5.2'
 }
 
 sonarqube {
