removed code smells

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,9 +49,18 @@ sonarqube {
     properties {
         property "sonar.projectKey", "beer.io"
     }
-
 }
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+}
+
 
 test {
     useJUnitPlatform()
 }
+
