--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker
         run: docker login --username=$USERNAME --password=$DOCKER_HUB_PASSWORD
-      - name: Build Image
-        run: docker build -t $USERNAME/$REPOSITORY_NAME .
-      - name: Push Image
-        run: docker push $USERNAME/$REPOSITORY_NAME
+      - name: Build Frontend Image
+        run: cd frontend; docker build -t $USERNAME/$REPOSITORY_NAME .
+      - name: Push Frontend Image
+        run: cd frontend; docker push $USERNAME/$REPOSITORY_NAME
+      - name: Build Backend Image
+        run: cd backend; docker build -t $USERNAME/$REPOSITORY_NAME .
+      - name: Push Backend Image
+        run: cd backend; docker push $USERNAME/$REPOSITORY_NAME
