--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,8 +41,11 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.4.4'
 
     //auth
-
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'com.auth0:java-jwt:3.18.2'
+
 }
 
 sonarqube {
