--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,10 @@ on:
       branches: 
        - master
        - development
-
+  pull_request:
+      branches:
+        - master
+        - development
 jobs:
   build:
 
