--- a/.github/workflows/CI-CD-SonarCloud.yml
+++ b/.github/workflows/CI-CD-SonarCloud.yml
@@ -35,7 +35,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: cd backend; ./gradlew build sonarqube --info
 
