--- a/.github/workflows/CI-CD-SonarCloud.yml
+++ b/.github/workflows/CI-CD-SonarCloud.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 16
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./backend/gradlew
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
