--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.4.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
