--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     postgresql:
       image: 'postgres:latest'
       container_name: postgresql
+      restart: always
       ports:
           - 5432:5432
       volumes:
