--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'com.auth0:java-jwt:3.18.2'
 
+    //websockets
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+
 }
 
 sonarqube {
