--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@progress/kendo-react-dropdowns": "^4.10.0",
     "@reach/portal": "^0.16.2",
     "@reduxjs/toolkit": "^1.6.2",
+    "@stomp/stompjs": "^6.1.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -27,7 +28,11 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "react-select-country-list": "^2.2.3",
+    "react-stomp": "^5.1.0",
     "redux": "^4.1.2",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^2.2.17",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
