--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //websockets
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 
 }
 
