--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     password: sa
-    url: h2:postgresql://mem:db;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:~/testdb
     username: sa
     driver-class-name: org.h2.Driver
   jpa:
